Users are only associated with 1 organisation
* The previous behaviour allowed multiple organisations to be associated with a single user. We believe this was prompted by the special case of UKRI where they represent 7 organisations. We know now that UKRI will be added last due to other reasons.
* The cost of allowing users to have multiple organisations is that we won't be able to reliably use the organisation#show page as the landing page for every user. Since if a user is given multiple organisations, we will send them to a landing page for one of them, with no possible way of navigating to the other.
* To remove this dead-end scenario that we aren't planning for, we are restricting every user down to 1 organisation.
* We plan to make this required in a subsequent commit since this is already quite large

Co-authored-by: Agz <a@deberny.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,6 +62,9 @@ en:
       create:
         failed: The service is experiencing issues creating new users and the team has been alerted to the problem.
         success: User successfully created
+      organisation:
+        hint: What organisation does this user belong to?
+        label: Choose an organisation
       submit: Submit
       update:
         failed: The service is experiencing issues updating users and the team has been alerted to the problem.
@@ -233,4 +236,5 @@ en:
     email: Email address
     identifier: Auth0 identifier
     name: Full name
+    organisation: Organisation
     role: Role
