--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -268,7 +268,7 @@ en:
     activity_form:
       show:
         aid_type: Aid type
-        country: Recipient country
+        country: Country
         dates: Dates
         finance: Finance
         flow: Flow
