Sector question uses radio buttons
User research showed the sector question was difficult to answer due to
the large number of possible responses. We tested breaking this question
into two steps which made the task much simpler for users.

This is the first step towards breaking the question into two parts.

First the codelist helper is able to return only the sectors in a given
sector category, when no category is supplied, return all sectors.

Then the sector question is presented as radio buttons.

--- a/config/locales/models_and_forms.en.yml
+++ b/config/locales/models_and_forms.en.yml
@@ -100,6 +100,8 @@ en:
         actual_start_date: Actual start date (optional)
         planned_end_date: Planned end date
         planned_start_date: Planned start date
+        sector:
+          html: What area of the economy or society is your %{level} helping? For example, research, education or SME development. Choose one of the <a href='https://www.oecd.org/dac/stats/documentupload/2015%20CRS%20purpose%20codes%20EN_updated%20April%202016.pdf' target='_blank' class='govuk-link'>CRS purpose codes.</a>
       user:
         organisation_ids: Organisations
         role: Role
@@ -117,8 +119,6 @@ en:
         recipient_country: A country that will benefit from this activity
         recipient_region:
           html: A supranational geopolitical region that will benefit from this activity.
-        sector:
-          html: For example, research, education or small and medium enterprise (SME) development. Choose one of the <a href='https://www.oecd.org/dac/stats/documentupload/2015%20CRS%20purpose%20codes%20EN_updated%20April%202016.pdf' target='_blank' class='govuk-link'>Common reporting standard (CRS) purpose codes (Opens in new window).</a>
         status: This is the stage your %{level} is currently at
         title: A short, human-readable title that contains a meaningful summary of the activity.
       budget:
