Add sector category step
In order to keep things simple, introduce sector category as a stand
alone question which sets the sector category thus reducing the number
of sector options shown to the user.

The decision was made to load the sector category values from the
vendor data rather than following what seems to be a pattern of having
the vendor data and translation data. Whilst having the option to have
the values displayed in the UI be different to that of the IATI data, it
was felt better to wait for that need to arise and not duplicate the
data in the code  at this point.

The decision to add the `sector_category_name` method to the model
rather than the activity presenter was made as the amount of work
required to refactor the activity controller to use a presenter was
deemed too large for the scope of this work.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -191,6 +191,8 @@ en:
         label: Recipient region
       sector:
         label: Focus area
+      sector_category:
+        label: Focus area category
       status:
         label: Status
       title:
@@ -288,7 +290,8 @@ en:
         purpose: Purpose
         purpose_level: Purpose of %{level}
         region: Recipient region
-        sector: What area of the economy or society is your %{level} helping?
+        sector: Which %{sector_category} sector is the focus area for this %{level}
+        sector_category: What is the focus area category for this %{level}
         status: Status
     budget:
       edit: Edit budget
