--- a/config/locales/models/activity.en.yml
+++ b/config/locales/models/activity.en.yml
@@ -32,10 +32,13 @@ en:
         publish_to_iati: Publish this activity to IATI?
     legend:
       activity:
+        level: Activity level
+        parent code for the vocabulary aid-type : Parent activity
         aid_type: Aid type
         actual_end_date: Actual end date (optional)
         actual_start_date: Actual start date (optional)
         geography: Will the benefitting recipient be a region or country?
+        parent: Select the %{parent_level} this %{level} belongs to
         planned_end_date: Planned end date
         planned_start_date: Planned start date
         purpose: What is the purpose of the %{level}?
@@ -48,7 +51,9 @@ en:
         actual_start_date: For example, 11 1 2020
         aid_type: A code for the vocabulary aid-type classifications. <a href='http://reference.iatistandard.org/203/codelists/AidType/' target='_blank'>International Aid Transparency Initiative (IATI) descriptions can be found here (Opens in new window)</a>
         flow: Read <a href='http://reference.iatistandard.org/203/codelists/FlowType/' target='_blank'>International Aid Transparency Initiative descriptions</a> of each flow type (opens in new window)
+        level: Activity levels
         identifier: This could be the reference you use in your internal systems
+        parent: Which existing %{parent_level} will this new %{level} belong to
         planned_end_date: For example, 28 11 2020
         planned_start_date: For example, 27 3 2020
         sector_category: What area of the economy or society is your %{level} helping? For example, research, education or small to medium-sized enterprise (SME) development. Choose one of the <a href='https://www.oecd.org/dac/stats/documentupload/2015%20CRS%20purpose%20codes%20EN_updated%20April%202016.pdf' target='_blank' class='govuk-link'>CRS purpose codes</a>
