Add the submit journey
Deliver partners can submit their report, confirm and see a completion
page.

Content at this point is incomplete as we need BEIS to confirm the
expectations and some content design work.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -16,7 +16,6 @@ en:
   page_content:
     reports:
       title: Reports
-      download_as_csv: Download report as a CSV
   label:
     report:
      state:
@@ -41,11 +40,24 @@ en:
     report:
       index: Reports
       edit: Edit report
-      show: View report %{report_name}
+      show: "%{report_financial_quarter} %{report_description}"
+      submit: Confirm submission of %{report_financial_quarter} %{report_description}
+      complete: Submission complete
   action:
     report:
       update:
         success: Report successfully updated
+      submit:
+        button: Submit report
+        failure: Report could not be submitted
+        success: Report submitted successfully
+        complete:
+          title: Submission complete
+          body: "%{report_financial_quarter} %{report_description}"
+      confirm:
+        button: Confirm submission
+      download:
+        button: Download report as CSV file
   activerecord:
     errors:
       models:
