Users can view submitted reports
Both Delivery partners and BEIS users can view submitted reports.

For Delivery partners, only their own.

For BEIS all organisations.

Reduced the size of the table titles as the number of tables on the page
is growing.

--- a/config/locales/models/report.en.yml
+++ b/config/locales/models/report.en.yml
@@ -5,6 +5,7 @@ en:
       report:
         active: Active reports
         inactive: Inactive reports
+        submitted: Submitted reports
     header:
       report:
         financial_quarter: Financial quarter
