Add Flow, Finance and Tied status to Report CSV
The values for Tied status and Finance are always fixed, they cannot vary, hence
they only have a single translation in `iati_en.yml`

Flow was missing from the Activity lines but has been added in.

--- a/config/locales/codelists/2_03/iati.en.yml
+++ b/config/locales/codelists/2_03/iati.en.yml
@@ -665,6 +665,10 @@ en:
       '4': Post-completion
       '5': Cancelled
       '6': Suspended
+    tied_status:
+      '5': Untied
+    finance:
+      '110': Standard grant
   generic:
     default_currency:
       aed: UAE Dirham
