Planned disbursement has no receiving organisation
The decision has been made to not collect a receiving organisation for
planned disbursements as this would introduce a great deal of complexity
not just for the application but for a delivery partner user having to
forecast spend for every recipient instead of the total spend for an
activity per financial quarter.

As a first step we remove the validation that requires a receiving
organisation name and type for a planned disbursement. We also remove
the fields on the form.

We have not removed the columns at this point as we have data in
production with the value set so there seems no reason to loose that at
the moment.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -9,20 +9,18 @@ en:
   form:
     label:
       planned_disbursement:
-        receiving_organisation_name: Receiving organisation name
-        receiving_organisation_type: Receiving organisation type
-        receiving_organisation_reference: IATI Reference (optional)
         value: Forecasted spend amount
     legend:
       planned_disbursement:
-        receiving_organisation: Receiving organisation
     hint:
       planned_disbursement:
         receiving_organisation: Receiving organisation
     hint:
       planned_disbursement:
-        receiving_organisation: The organisation receiving the money from this transaction.
-        receiving_organisation_reference_html: For example, GB-COH-12345. To lookup codes or for more infomation see <a href="http://org-id.guide/" target="_blank" class="govuk-link">the organisation finder service (Opens in new window)</a>
+        period_end_date: End date
+        period_start_date: Start date
+    hint:
+      planned_disbursement:
   table:
     header:
       planned_disbursement:
