Users can revise a planned disbursement
When a user needs to change the value of a planned disbursement that is
already in an approved report, they must revise it.

A revision is a new version that supersedes the old one. The only value
that should be changed in order to make a revision is the amount (stored
in `value`).

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -6,6 +6,9 @@ en:
         success: Forecasted spend successfully created
       update:
         success: Forecasted spend successfully updated
+      revision:
+        create:
+          success: Forecasted spend successfully revised
   form:
     label:
       planned_disbursement:
@@ -45,6 +48,8 @@ en:
     planned_disbursement:
       edit: Edit forecasted spend
       new: Add forecasted spend
+      revision:
+        new: Revise forecasted spend
   activerecord:
     errors:
       models:
