--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -6,6 +6,9 @@ en:
         success: Forecasted spend successfully created
       update:
         success: Forecasted spend successfully updated
+      revision:
+        create:
+          success: Forecasted spend successfully revised
   form:
     label:
       planned_disbursement:
@@ -40,6 +43,8 @@ en:
     planned_disbursement:
       edit: Edit forecasted spend
       new: Add forecasted spend
+      revision:
+        new: Revise forecasted spend
   activerecord:
     errors:
       models:
