--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -53,5 +53,6 @@ en:
             value:
               inclusion: Value must be between 0.01 and 99,999,999,999.00
               not_a_number: "Value must be a valid number"
+              revised_value_not_the_same_as_original: "The revised forecasted spend cannot be the same as the prior forecasted spend"
             planned_disbursement_type:
               only_one_original: There is already an original forecasted spend for Q%{financial_quarter} %{financial_year_start}-%{financial_year_end}
