A user can cancel revising a planned disbursement
Some users have found it difficult when they find themselves on a view
that creates a new entity with no way out. They could just use the back
button in the browser, but having a 'cancel' button feels more explicit
and closer to the opposite action.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -8,6 +8,7 @@ en:
         success: Forecasted spend successfully updated
       revision:
         create:
+          button: Revise forecasted spend
           success: Forecasted spend successfully revised
   form:
     label:
