--- a/config/locales/default.en.yml
+++ b/config/locales/default.en.yml
@@ -14,6 +14,7 @@ en:
       download_as_xml: Download as XML
       menu: Menu
       submit: Submit
+      cancel: Cancel
     link:
       add: Add
       back: Back
