Users can edit revisions
For BEIS users, a revised planned disbursement can be edit, this is for
the case when a mistake has been made as a BEIS user can edit at
anytime. BEIS user still may need to formally revise a budget to capture
some change in spend.

For delivery partner users, a revised planned disbursement can be edited
whilst the report in which it was created is editable.

--- a/config/locales/models/planned_disbursement.en.yml
+++ b/config/locales/models/planned_disbursement.en.yml
@@ -10,6 +10,8 @@ en:
         create:
           button: Revise forecasted spend
           success: Forecasted spend successfully revised
+        update:
+          success: Revised forecasted spend successfully updated
   form:
     label:
       planned_disbursement:
@@ -45,6 +47,7 @@ en:
       edit: Edit forecasted spend
       new: Add forecasted spend
       revision:
+        edit: Edit revised forecasted spend
         new: Revise forecasted spend
   activerecord:
     errors:
