--- a/config/locales/models/budget.en.yml
+++ b/config/locales/models/budget.en.yml
@@ -14,6 +14,8 @@ en:
     legend:
       budget:
         budget_type: Type
+        providing_organisation: Providing organisation
+        providing_organisation_id: Providing organisation
     prompt:
       budget:
         financial_year: Select a financial year
@@ -63,3 +65,5 @@ en:
                 2: You cannot assign Newton budget to a GCRF funded activity.
             financial_year:
               blank: Select a financial year
+            providing_organisation_id:
+              blank: Select the organisation that provides the transferred budget
